[tool.poetry]
package-mode = false

[project]
name = "library-backend"
description = "API to the library management system"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
